--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,25 @@
-.App {
-  text-align: center;
+#likes {
+  width: 100px;
+  height: 50px;
+  line-height: 50px;
+  font-family: "Helvetica", sans-serif;
+  font-size: 15px;
+  border: none;
+  border-radius: 4px;
+  background-color: #4CAF50;
+  box-shadow: 0 9px #999;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+#likes:hover {
+  background-color: #3e8e41;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#likes:focus {
+  outline: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#likes:active {
+  background-color: #3e8341;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
